src/main/kotlin/com/example/hexagonal/global/error/exception/CustomException.kt
package com.example.hexagonal.global.error.exception

abstract class CustomException (
    val errorCode: ErrorCode
) : RuntimeException()